@@ -1,4 +1,8 @@
 
+2022-12-06 Simon Sobisch <simonsobisch@gnu.org>
+
+	* field.c (validate_redefines): check for target not to have ANY LENGTH
+
 2022-12-03 Simon Sobisch <simonsobisch@gnu.org>
 
 	* cobc.c: check SOURCE_DATE_EPOCH once, if set parse via libcob
